src/objects/BMCServiceDesk__SLA_Milestone_Actions__c.object
<CustomObject>
    <description>SLA Milestone Actions</description>
    <fields>
        <fullName>BMCServiceDesk__Cc__c</fullName>
        <label>Cc</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Email_Template_ID__c</fullName>
        <description>Email Template ID</description>
        <label>Email Template ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSLA_Milestone__c</fullName>
        <label>SLA Milestone</label>
        <referenceTo>BMCServiceDesk__SLA_Milestones__c</referenceTo>
        <relationshipLabel>SLA Milestone Actions</relationshipLabel>
        <relationshipName>SLA_Milestone_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__To__c</fullName>
        <label>To</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type__c</fullName>
        <description>Action Type, currently we have only 1 action type &apos;Send Email&apos;</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send Email</fullName>
                    <default>true</default>
                    <label>Send Email</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SLA Milestone Action</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SLA Milestone Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestone Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>